Sun Aug 24 19:40:13 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_init_copy): copy encs.

Sun Aug 24 19:17:31 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_open): add an argument: vperm.
	  (open_key_args): call rb_io_open with perm.

Sun Aug 24 19:11:07 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (sym_invalid): removed.
	  (sym_undef): removed.
	  (sym_ignore): removed.
	  (sym_replace): removed.

Sun Aug 24 19:07:17 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_reopen): initialize fptr->encs.opts.

Sun Aug 24 18:37:42 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_s_pipe): accept optional hash.
	  (rb_io_set_encoding): ditto.
	  (rb_io_extract_modeenc): use rb_econv_opts to initialize
	  ecopts.
	  (rb_file_open_generic): ditto.
	  (rb_file_open_internal): ditto.
	  (io_encoding_set): new argument: opt.
	  (argf_set_encoding): copy fptr->encs.opts to argf_ecopts.

	* transcode.c (rb_econv_opts): accept Qnil for initialization.

Sun Aug 24 18:10:08 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (rb_io_enc_t): add opts field.
	  (FMODE_INVALID_MASK): removed.
	  (FMODE_INVALID_IGNORE): ditto.
	  (FMODE_INVALID_REPLACE): ditto.
	  (FMODE_UNDEF_MASK): ditto.
	  (FMODE_UNDEF_IGNORE): ditto.
	  (FMODE_UNDEF_REPLACE): ditto.
	  (MakeOpenFile): initialize the opts field.

	* io.c (make_writeconv): use the opts field.
	  (io_fwrite): ditto.
	  (make_readconv): ditto.
	  (argf_ecopts): new macro.
	  (rb_io_extract_modeenc): fill the opts field.
	  (argf_next_argv): ditto.
	  (rb_file_open_generic): initialize the opts field.
	  (rb_file_open_internal): ditto.
	  (io_encoding_set): ditto.
	  (argf_set_encoding): ditto.

Sun Aug 24 18:02:14 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (struct argf): use struct rb_io_enc_t.
	  (argf_enc): follow the struct argf change.
	  (argf_enc2): ditto.

Sun Aug 24 17:36:21 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_str_transcode): make 3rd argument
	  rb_econv_option_t*.
